--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h2>Test</h2>
 
-
+<input type="text" id="email" name="email">
 <button id="start" onclick="start()">Start</button>
 <button id="stop" style="display: none" onclick="stop()">Stop</button>
 
@@ -54,8 +54,10 @@
         id="video" 
         autoplay="true" 
         playsinline="true" 
-        style = "background-color: coral;   width: 600px; height: 400px;">    
+        style = "background-color: coral;   width: 1200px; height: 400px;">    
     </video>
+
+  
 </div>
 
 <h2>Data channel</h2>
